@@ -1,3 +1,7 @@
+2019-01-14 Alexios Ghalanos <alexios@4dscape.com>
+	* DESCRIPTION (Version): New version is 1.3-6.
+	* Fix to fMoments class which had the wrong slot (scenario instead of moments).
+
 2018-08-25 Alexios Ghalanos <alexios@4dscape.com>
 	* DESCRIPTION (Version): New version is 1.3-5.
 	* Clean up of xts plotting which was broken due to xts maintainer
@@ -6,6 +10,7 @@
 	or a wide matrix/xts (when possible) for correlations and covariances. In the case
 	of covariances, the diagonal is also returned, whilst for correlation only the lower
 	diagonal.
+	* Added STRICT_R_HEADERS per Dirk's email (change related to PI only).
 
 2018-02-12 Alexios Ghalanos <alexios@4dscape.com>
 	* DESCRIPTION (Version): New version is 1.3-4.
